Fix header overlap

--- a/index.html
+++ b/index.html
@@ -562,6 +562,7 @@ input[type="range"]::-webkit-slider-thumb { -webkit-appearance: none; width: 14p
 [data-lang="en"] .en-text { display: inline; }
 .jp-text { display: none; }
 </style>
+<link rel="stylesheet" href="fix_header.css">
 </head>
 <body>
 
