Update social links

--- a/index.html
+++ b/index.html
@@ -601,8 +601,8 @@ gap:30px;
     </div>
     <div class="credits-links">
       <a href="https://github.com/colonel1223" target="_blank">GitHub</a>
-      <a href="https://x.com/colonel1223" target="_blank">𝕏</a>
-      <a href="https://linkedin.com/in/colonel1223" target="_blank">LinkedIn</a>
+      <a href="https://x.com/colonel_1223" target="_blank">𝕏</a>
+      <a href="https://www.linkedin.com/in/spencercottrell/" target="_blank">LinkedIn</a>
     </div>
   </div>
   <div class="credits-right">
@@ -1048,8 +1048,8 @@ gap:30px;
   </div>
   <div style="margin-top:2rem; display:flex; justify-content:center; gap:2rem; flex-wrap:wrap">
     <a href="https://github.com/colonel1223" target="_blank" style="color:var(--red); text-decoration:none; font-size:0.65rem; letter-spacing:0.2em">GITHUB</a>
-    <a href="https://x.com/colonel1223" target="_blank" style="color:var(--red); text-decoration:none; font-size:0.65rem; letter-spacing:0.2em">𝕏</a>
-    <a href="https://linkedin.com/in/colonel1223" target="_blank" style="color:var(--red); text-decoration:none; font-size:0.65rem; letter-spacing:0.2em">LINKEDIN</a>
+    <a href="https://x.com/colonel_1223" target="_blank" style="color:var(--red); text-decoration:none; font-size:0.65rem; letter-spacing:0.2em">𝕏</a>
+    <a href="https://www.linkedin.com/in/spencercottrell/" target="_blank" style="color:var(--red); text-decoration:none; font-size:0.65rem; letter-spacing:0.2em">LINKEDIN</a>
   </div>
   <div class="footer-sig">
     Spencer Kitaro Cottrell — コトレル・キタロウ・スペンサー<br>
