Add universal device optimization

--- a/index.html
+++ b/index.html
@@ -564,6 +564,7 @@ input[type="range"]::-webkit-slider-thumb { -webkit-appearance: none; width: 14p
 </style>
 <link rel="stylesheet" href="fix_header.css">
 <link rel="stylesheet" href="hud_override.css">
+<link rel="stylesheet" href="responsive_fix.css">
 </head>
 <body>
 
